<resources>
    <string name="app_name">Hacker News</string>
    <string name="favorite">Favorite</string>
    <string name="top_stories">Top Stories</string>
    <string name="dummy_title">“My YC app: Dropbox - Throw away your USB drive”</string>
    <string name="dummy_author">~ dhouston</string>
    <string name="dummy_date">17–01–2022</string>
    <string name="author">Author</string>
    <string name="date">Date</string>
    <string name="story_detail">Story Detail</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="like">Like it? add to your favorite list by hitting the star</string>
    <string name="comments">Comments</string>
    <string name="title_fav_placeholder">\"%1$s\"</string>
    <string name="author_fav_placeholder">~%1$s</string>
    <string name="button_favorite">button_favorite</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="dummy_count">74</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_favorite">Favorite</string>
</resources>