<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="story"
            type="com.ddb.hackernews.core.domain.model.News" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.DetailNewsFragment">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_story_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/story_detail"
            android:textColor="@color/orange_primary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/iv_back"
            app:layout_constraintTop_toBottomOf="@id/iv_back" />

        <View
            android:id="@+id/v1"
            android:layout_width="363dp"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_story_detail" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_detail_story"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_detail_title"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@{story.title}"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_detail_bg_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/ic_bg_orange"
                    app:layout_constraintStart_toStartOf="@id/tv_detail_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="@id/iv_detail_bg_author"
                    app:layout_constraintEnd_toEndOf="@id/iv_detail_bg_author"
                    app:layout_constraintStart_toStartOf="@id/iv_detail_bg_author"
                    app:layout_constraintTop_toTopOf="@id/iv_detail_bg_author" />

                <TextView
                    android:id="@+id/tv_detail_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@{story.by}"
                    android:textSize="13sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="@id/iv_detail_bg_author"
                    app:layout_constraintStart_toEndOf="@id/iv_detail_bg_author"
                    app:layout_constraintTop_toTopOf="@id/iv_detail_bg_author" />

                <TextView
                    android:id="@+id/tv_detail_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_date"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="@id/iv_detail_bg_author"
                    app:layout_constraintEnd_toEndOf="@id/tv_detail_title"
                    app:layout_constraintTop_toTopOf="@id/iv_detail_bg_author" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_detail_bg_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_bg_orange"
                    app:layout_constraintBottom_toBottomOf="@id/tv_detail_date"
                    app:layout_constraintEnd_toStartOf="@id/tv_detail_date"
                    app:layout_constraintTop_toTopOf="@id/tv_detail_date" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="@id/iv_detail_bg_date"
                    app:layout_constraintEnd_toEndOf="@id/iv_detail_bg_date"
                    app:layout_constraintStart_toStartOf="@id/iv_detail_bg_date"
                    app:layout_constraintTop_toTopOf="@id/iv_detail_bg_date" />

                <View
                    android:id="@+id/v2"
                    android:layout_width="300dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_detail_bg_author" />

                <TextView
                    android:id="@+id/tv_detail_desc"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:justificationMode="inter_word"
                    android:text="@{story.url}"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/v2" />

                <View
                    android:id="@+id/v3"
                    android:layout_width="300dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_desc" />

                <TextView
                    android:id="@+id/tv_detail_like"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/like"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="@id/v3"
                    app:layout_constraintStart_toStartOf="@id/v3"
                    app:layout_constraintTop_toBottomOf="@id/v3" />

                <ImageView
                    android:id="@+id/btn_detail_star"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/button_favorite"
                    android:shadowColor="@color/grey"
                    android:src="@drawable/ic_star_orange"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_like" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/comments"
            android:textColor="@color/orange_primary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_story_detail"
            app:layout_constraintTop_toBottomOf="@id/cv_detail_story" />

        <View
            android:id="@+id/v4"
            android:layout_width="363dp"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_comments" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_comments"
            android:layout_width="363dp"
            android:layout_height="470dp"
            android:layout_marginTop="12dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@id/v4"
            app:layout_constraintStart_toStartOf="@id/v4"
            app:layout_constraintTop_toBottomOf="@id/v4">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/comment1"
                    layout="@layout/shimmer_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <include
                    android:id="@+id/comment2"
                    layout="@layout/shimmer_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/comment1"
                    android:layout_marginTop="4dp" />

                <include
                    android:id="@+id/comment3"
                    layout="@layout/shimmer_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/comment2"
                    android:layout_marginTop="4dp" />

                <include
                    android:id="@+id/comment4"
                    layout="@layout/shimmer_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/comment3"
                    android:layout_marginTop="4dp" />

            </RelativeLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_comments"
            android:layout_width="363dp"
            android:layout_height="470dp"
            android:layout_marginTop="12dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@id/v4"
            app:layout_constraintStart_toStartOf="@id/v4"
            app:layout_constraintTop_toBottomOf="@id/v4" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>